--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,6 +21,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "react-firebase-file-uploader": "^2.4.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2"
   }
